chore: Update to Java 25