@@ -42,6 +42,10 @@ application {
         "-Xms256M",                     // initial heap size
         "-Xmx1g",                       // maximum heap size; SAT solver can consume a lot of memory
 
+        // Allow JNI for native solvers
+        "--enable-native-access=re.belv.croiseur.solver.paulgb",
+        "--enable-native-access=re.belv.croiseur.solver.szunami",
+
         // Useful application debug options
         //"-Dre.belv.croiseur.puzzle.path=/your/debug/puzzle/path",
 
